# Collision-Probability-Estimation

./: CMakeLists.txt  LICENSE  MCS_rectangle.cpp  README.md  collision_angle_intervals.cpp  int_unions.cpp  poc_overhead_fu.cpp  side_functions.cpp  sort_intervals.cpp  testbench.cpp  twoD_integral.cpp
include/: mcs_rectangle.hpp  poc_function.hpp
